[package]
name = "playground"
version = "0.1.0"
edition = "2021"
authors = ["thor <thorck@protonmail.com>"]
repository = "https://github.com//playground"
description = """"""
license = "Unlicense OR MIT"

[dependencies]
# Binary
dotenv = "0.15"                                         # .env file parsing
clap = { version = "3.2", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
# Common
# optional => can use in a feature, otherwise, ignored; remove optional to use normally.
cfg-if = { version = "1.0.0", optional = true }                   # branching compilation logic
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }
# https://rhai.rs/book/start/features.html
rhai = { version = "1.8.0", optional = true } # scripting lanugage, yeet
cute = { version = "0.3", optional = true }   # python-like list comprehensions

# Error Handling
thiserror = "1.0"
anyhow = "1.0"
# Logging
log = "0.4"
env_logger = "0.9"

# Your dependencies


[features]
some_feature = [
  "dep:serde",
  "dep:serde_json",
] # use this to use optional dependencies

[dev-dependencies]
# Bench
criterion = "0.4"
iai = "0.1"       # criterion alternative
# Testing utils
test-log = "0.2"                                       # log/tracing independent test-log consumer
rstest = "0.15"
quickcheck = "1.0"
quickcheck_macros = "1"                                # derive 
arbitrary = { version = "1.1", features = ["derive"] }

[[test]]
name = "integration"
path = "tests/tests.rs"

[[bench]]
name = "bench"
harness = false
